# SPDX-FileCopyrightText: 2021 Luke Granger-Brown <git@lukegb.com>
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "buildcatrust"
author = "Luke Granger-Brown"
author-email = "buildcatrust@lukegb.com"
home-page = "https://github.com/lukegb/buildcatrust"
classifiers = [ "License :: OSI Approved :: MIT License", ]

[tool.flit.scripts]
buildcatrust = "buildcatrust.cli:main"

[tool.isort]
profile = "google"
src_paths = ["buildcatrust"]

[tool.pytest.ini_options]
testpaths = ["buildcatrust"]

[tool.pytype]
inputs = ["buildcatrust"]

[tool.ruff]
select = ["F", "E", "W", "I"]
ignore = [
  "E501",  # drop E501 line-too-long, format will do its best
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
# lexicographical
single-line-exclusions = ["typing"]
order-by-type = false
# group-by-package
