# SPDX-FileCopyrightText: 2021 Luke Granger-Brown <git@lukegb.com>
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "buildcatrust"
requires-python = ">=3.11"
license.file = "LICENSES/MIT.txt"
readme = "README.md"
authors = [
    {name = "Luke Granger-Brown", email = "buildcatrust@lukegb.com"},
    {name = "Ryan Lahfa", email = "ryan@lahfa.xyz"},
]
maintainers = [
    {name = "Luke Granger-Brown", email = "buildcatrust@lukegb.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dynamic = ["description", "version"]

[project.urls]
Source = "https://github.com/lukegb/buildcatrust"

[project.scripts]
buildcatrust = "buildcatrust.cli:main"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["buildcatrust"]

[tool.pytype]
inputs = ["buildcatrust"]

[tool.ruff]
select = ["F", "E", "W", "I"]
ignore = [
  "E501",  # drop E501 line-too-long, format will do its best
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
# lexicographical
single-line-exclusions = ["typing"]
order-by-type = false
# group-by-package
